<resources>
    <string name="app_name">BookmarkManager</string>
    <string name="title_categories">Categories</string>
    <string name="title_add_bookmark">Add bookmark</string>
    <string name="title_settings">Settings</string>
    <string name="title_choose_category">Choose category</string>
    <string name="title_add_category">Add category</string>
    <string name="title_edit_category">Edit category</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_bookmark">Bookmark</string>
    <string name="menu_add_category">Category</string>
    <string name="menu_done">Done</string>
    <string name="menu_edit">Edit</string>
    <string name="hint_header">Header</string>
    <string name="hint_description">Description</string>
    <string name="hint_link">Insert link</string>
    <string name="fab_add_link">Add link from clipboard</string>
    <string name="category_none">No category</string>
    <string name="settings_instant_view">Open links in browser</string>
    <string name="settings_export">Export bookmarks</string>
    <string name="settings_rate_app">Rate app</string>
    <string name="error_text">Some error occurred.</string>
    <string name="retry_button_text">Try again</string>
    <string name="empty_url_message">Link can not be empty.</string>
    <string name="empty_category_title_message">Category title can not be empty.</string>
</resources>
