<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:padding="@dimen/list_item_padding"
        android:text="@string/menu_add"
        android:textAppearance="@style/ToolbarTitleTextAppearance"/>

    <TextView
        android:id="@+id/add_category"
        style="@style/TextStyle.ListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_add_category"/>

    <TextView
        android:id="@+id/add_bookmark"
        style="@style/TextStyle.ListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_add_bookmark" />

</LinearLayout>