<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/side_padding"
    tools:context=".ui.bookmark.AddBookmarkFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/header_edit"
        style="@style/EditTextStyle.Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/hint_header"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/description_edit"
        style="@style/EditTextStyle.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:hint="@string/hint_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_edit"
        tools:text="@string/hint_description"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/link_edit"
        style="@style/EditTextStyle.Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:hint="@string/hint_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_edit"
        tools:text="@string/hint_link"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/category_chip"
        style="@style/ChipStyle.Empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin"
        android:layout_marginBottom="@dimen/content_margin"
        android:text="@string/category_none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/link_edit"
        app:layout_constraintBottom_toTopOf="@id/fab_add_from_clipboard"
        app:layout_constraintVertical_bias="0"
        tools:visibility="visible"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_from_clipboard"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/fab_add_link"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>