<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_instant_view"
        style="@style/TextStyle.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/settings_instant_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View style="@style/DividerStyle"
        android:layout_marginEnd="@dimen/side_padding"
        android:layout_marginStart="@dimen/side_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_instant_view"/>

    <TextView
        android:id="@+id/settings_export"
        style="@style/TextStyle.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_instant_view" />

    <View style="@style/DividerStyle"
        android:layout_marginEnd="@dimen/side_padding"
        android:layout_marginStart="@dimen/side_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_export"/>

    <TextView
        android:id="@+id/settings_rate_app"
        style="@style/TextStyle.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_rate_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_export" />

</androidx.constraintlayout.widget.ConstraintLayout>